--- a/AspMvcECommerce2.WebUI/Views/Default/Index.cshtml
+++ b/AspMvcECommerce2.WebUI/Views/Default/Index.cshtml
@@ -7,12 +7,95 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <meta name="viewport" content="width=device-width" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="~/wwwroot/css/materialize.min.css" />
+    <link rel="stylesheet" href="~/wwwroot/css/custom.css" />
 </head>
 <body>
-    <div>
-        Hello!
+    <!-- Preloader -->
+    <div class="preloader-wrapper big active">
+        <div class="spinner-layer spinner-blue">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="spinner-layer spinner-red">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="spinner-layer spinner-yellow">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="spinner-layer spinner-green">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
     </div>
+
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">Logo</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="#!home">Home</a></li>
+                <li><a href="#!signup">Signup</a></li>
+                <li><a href="#!home:out">Signout</a></li>
+                <li><a href="#!signin">Signin</a></li>
+                @*<li><a id="cart" href="#modal" class="modal-trigger"><i class="material-icons">shopping_cart</i></a></li>*@
+            </ul>
+        </div>
+    </nav>
+
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="#!home">Home</a></li>
+        <li><a href="#!signup">Signup</a></li>
+        <li><a href="#!home:out">Signout</a></li>
+        <li><a href="#!signin">Signin</a></li>
+        @*<li><a id="cart" href="#modal" class="modal-trigger"><i class="material-icons">shopping_cart</i></a></li>*@
+    </ul>
+
+    <!--Почему использована комбинация #! вместо #
+        https://netpeak.net/ru/blog/kak-optimizirovat-spa-sayty/
+    -->
+    @*<section id="home" class="active" data-src='@Url.Content("/api/auth/page?pagename=home&param=no")'></section>*@
+    <section id="home" class="active" data-src='@Url.Content("~/wwwroot/pages/home.htm")'></section>
+    <section id="signup" data-src='@Url.Content("/api/auth/page?pagename=signup&param=no")'></section>
+    @*<section id="signin" data-src='@Url.Content("/api/auth/page?pagename=signin&param=no")'></section>*@
+    <section id="signin" data-src='@Url.Content("~/wwwroot/pages/signin.htm")'></section>
+    <section id="admin" data-src='@Url.Content("/api/auth/page?pagename=admin&param=no")'></section>
+    <section id="adminunit" data-src='@Url.Content("/api/auth/page?pagename=adminunit&param=no")'></section>
+
+    <script src="~/wwwroot/js/jquery-3.3.1.min.js"></script>
+    <script src="~/wwwroot/js/jquery-hashchange.js"></script>
+    <script src="~/wwwroot/js/hogan-3.0.2.min.js"></script>
+    <script src="~/wwwroot/js/materialize.min.js"></script>
+    <script src="~/wwwroot/js/ImageTools.js"></script>
+    <script src="~/wwwroot/js/app.js"></script>
+    <script src="~/wwwroot/js/custom.js"></script>
 </body>
 </html>
