--- a/AspMvcECommerce2.WebUI/Views/Default/Index.cshtml
+++ b/AspMvcECommerce2.WebUI/Views/Default/Index.cshtml
@@ -66,6 +66,7 @@
                 <li><a href="#!signup">Signup</a></li>
                 <li><a href="#!home:out">Signout</a></li>
                 <li><a href="#!signin">Signin</a></li>
+                <li><a href="#!about">About</a></li>
                 @*<li><a id="cart" href="#modal" class="modal-trigger"><i class="material-icons">shopping_cart</i></a></li>*@
             </ul>
         </div>
@@ -76,6 +77,7 @@
         <li><a href="#!signup">Signup</a></li>
         <li><a href="#!home:out">Signout</a></li>
         <li><a href="#!signin">Signin</a></li>
+        <li><a href="#!about">About</a></li>
         @*<li><a id="cart" href="#modal" class="modal-trigger"><i class="material-icons">shopping_cart</i></a></li>*@
     </ul>
 
@@ -89,6 +91,7 @@
     <section id="signin" data-src='@Url.Content("~/wwwroot/pages/signin.htm")'></section>
     <section id="admin" data-src='@Url.Content("/api/auth/page?pagename=admin&param=no")'></section>
     <section id="adminunit" data-src='@Url.Content("/api/auth/page?pagename=adminunit&param=no")'></section>
+    <section id="about" class="active" data-src='@Url.Content("~/wwwroot/pages/about.htm")'></section>
 
     <script src="~/wwwroot/js/jquery-3.3.1.min.js"></script>
     <script src="~/wwwroot/js/jquery-hashchange.js"></script>
