--- a/AspMvcECommerce2.WebUI/wwwroot/css/custom.css
+++ b/AspMvcECommerce2.WebUI/wwwroot/css/custom.css
@@ -14,7 +14,7 @@ nav a.active, ul.sidenav a.active {
     font-weight: bold;
 }
 
-a[href='#!home:out'] {
+a[href='#!home:out'], .cart {
     display: none;
 }
 
